# supervised-learning

./: 0-what-is-supervised-learning.ipynb  1-data-collection.ipynb  2-data-exploration-and-preparation.ipynb  3-split-data-into-training-and-test-sets.ipynb  4-choose-a-supervised-learning-algorithm.ipynb  5-train-the-model.ipynb  6-evaluate-model-performance.ipynb  7-model-tuning-and-selection.ipynb  README.md  example-classification-cancer-random-forest.ipynb  example-classification.ipynb  example-regression.ipynb  pyproject.toml  requirements.txt
