[tool.poetry]
name = "supervised-learning-classes"
version = "0.1.0"
description = ""
authors = ["DidierRLopes <didierrlopes@gmail.com>"]
readme = "README.md"
packages = [{include = "supervised_learning_classes"}]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.0"
numpy = "^1.26.4"
scikit-learn = "^1.5.0"
seaborn = "^0.13.2"
plotly = "^5.22.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
